# hadaqos

./: README.md  hosts  install.sh  latency.c  mk  server.conf
hadafs-0.6-master/: AUTHORS  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  hadafs.spec  hadafs.spec.in  hadafs_iposw  libtool
hadafs-0.6-master/argp-standalone/: Makefile  config.status  configure  configure.ac
hadafs-0.6-master/argp-standalone/autom4te.cache/: output.1  output.2  requests  traces.2
hadafs-0.6-master/auth/: Makefile  Makefile.in
hadafs-0.6-master/auth/addr/: Makefile  Makefile.in
hadafs-0.6-master/auth/addr/src/: Makefile  Makefile.am  Makefile.in  addr.c  addr.la
hadafs-0.6-master/auth/login/: Makefile  Makefile.in
hadafs-0.6-master/auth/login/src/: Makefile  Makefile.am  Makefile.in  login.c  login.la
hadafs-0.6-master/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
hadafs-0.6-master/booster/: Makefile  Makefile.in
hadafs-0.6-master/booster/src/: Makefile  Makefile.am  Makefile.in  booster-fd.c  booster-fd.h  booster.c  booster_fstab.c  booster_fstab.h  booster_stat.c  libhadafs-booster.la  libhadafs_booster_la-booster-fd.lo  libhadafs_booster_la-booster.lo  libhadafs_booster_la-booster_fstab.lo  libhadafs_booster_la-booster_stat.lo
hadafs-0.6-master/booster/src/.deps/: libhadafs_booster_la-booster-fd.Plo  libhadafs_booster_la-booster.Plo  libhadafs_booster_la-booster_fstab.Plo  libhadafs_booster_la-booster_stat.Plo
hadafs-0.6-master/booster/src/.libs/: libhadafs-booster.la  libhadafs-booster.lai  libhadafs-booster.so.0  libhadafs-booster.so.0.0.0  libhadafs-booster.so.0.0.0T
hadafs-0.6-master/doc/: Makefile  Makefile.am  Makefile.in  get_put_api_using_xattr.txt  hadafs.8  hadafs.vol.sample  hadafsd.vol.sample  mac-related-xattrs.txt  porting_guide.txt  translator-options.txt
hadafs-0.6-master/doc/examples/: Makefile  Makefile.am  Makefile.in  README  server-gmdb1.vol  server-gmdb2.vol  server-lta1.vol  server-lta2.vol  server.conf
hadafs-0.6-master/doc/hacker-guide/: Makefile  Makefile.in  bdb.txt  call-stub.txt  posix.txt  replicate.txt  write-behind.txt
hadafs-0.6-master/extras/: Makefile  Makefile.am  Makefile.in
hadafs-0.6-master/extras/ctltools/: Makefile  Makefile.am  Makefile.in  hadafs-mode.el  hadafs-volgen  hadafs.vim  specgen.scm
hadafs-0.6-master/extras/ctltools/MacOSX/: Portfile
hadafs-0.6-master/extras/ctltools/init.d/: Makefile  Makefile.am  Makefile.in  hadafs-server.plist  hadafs-server.plist.in  hadafsd-Debian  hadafsd-Debian.in  hadafsd-Redhat  hadafsd-SuSE  hadafsd-SuSE.in
hadafs-0.6-master/extras/vols-gen/: server-vol-gen.sh
hadafs-0.6-master/hadafsd/: Makefile  Makefile.in
hadafs-0.6-master/hadafsd/src/: Makefile  Makefile.am  Makefile.in  fetch-spec.c  genvol.c  hadafsd  hadafsd.c  hadafsd.h
hadafs-0.6-master/hadafsd/src/.deps/: fetch-spec.Po  genvol.Po  hadafsd.Po
hadafs-0.6-master/hadafsd/src/.libs/: hadafsd
hadafs-0.6-master/libhadafs/: Makefile  Makefile.in
hadafs-0.6-master/libhadafs/src/: Makefile  Makefile.am  Makefile.in  authenticate.c  authenticate.h  byte-order.h  call-stub.c  call-stub.h  common-utils.c  common-utils.h  compat-errno.c  compat-errno.h  compat.c  compat.h  defaults.c  defaults.h  dict.c  dict.h  event.c  event.h  fd.c  fd.h  hadafs.h  hadafs_ioctl.h  hashfn.c  hashfn.h  iobuf.c  iobuf.h  libhadafs.la  libhadafs_la-authenticate.lo  libhadafs_la-call-stub.lo  libhadafs_la-common-utils.lo  libhadafs_la-compat-errno.lo  libhadafs_la-compat.lo  libhadafs_la-defaults.lo  libhadafs_la-dict.lo  libhadafs_la-event.lo  libhadafs_la-fd.lo  libhadafs_la-hashfn.lo  libhadafs_la-iobuf.lo  (+38 more)
hadafs-0.6-master/libhadafs/src/.deps/: libhadafs_la-authenticate.Plo  libhadafs_la-call-stub.Plo  libhadafs_la-common-utils.Plo  libhadafs_la-compat-errno.Plo  libhadafs_la-compat.Plo  libhadafs_la-defaults.Plo  libhadafs_la-dict.Plo  libhadafs_la-event.Plo  libhadafs_la-fd.Plo  libhadafs_la-hashfn.Plo  libhadafs_la-iobuf.Plo  libhadafs_la-logging.Plo  libhadafs_la-mem-pool.Plo  libhadafs_la-object.Plo  libhadafs_la-rb.Plo  libhadafs_la-rbthash.Plo  libhadafs_la-spec.lex.Plo  libhadafs_la-syscall.Plo  libhadafs_la-timer.Plo  libhadafs_la-transport.Plo  libhadafs_la-xlator.Plo  libhadafs_la-y.tab.Plo
hadafs-0.6-master/libhadafs/src/.libs/: libhadafs.la  libhadafs.lai  libhadafs.so.0  libhadafs.so.0.0.0
hadafs-0.6-master/libhadafsclient/: Makefile  Makefile.in
hadafs-0.6-master/libhadafsclient/src/: Makefile  Makefile.am  Makefile.in  hadafs_ioctl.h  libhadafsclient-internals.h  libhadafsclient.c  libhadafsclient.h  libhadafsclient.la  libhadafsclient_la-libhadafsclient.lo
hadafs-0.6-master/libhadafsclient/src/.deps/: libhadafsclient_la-libhadafsclient.Plo
hadafs-0.6-master/libhadafsclient/src/.libs/: libhadafsclient.la  libhadafsclient.lai  libhadafsclient.so.0  libhadafsclient.so.0.0.0  libhadafsclient.so.0.0.0T
hadafs-0.6-master/transport/: Makefile  Makefile.in
hadafs-0.6-master/transport/ib-verbs/: Makefile  Makefile.in
hadafs-0.6-master/transport/ib-verbs/src/: Makefile  Makefile.am  Makefile.in  ib-verbs.c  ib-verbs.h  name.c  name.h
hadafs-0.6-master/transport/socket/: Makefile  Makefile.in
hadafs-0.6-master/transport/socket/src/: Makefile  Makefile.am  Makefile.in  name.c  name.h  socket.c  socket.h  socket.la
hadafs-0.6-master/xlators/: Makefile  Makefile.am  Makefile.in
hadafs-0.6-master/xlators/cluster/: Makefile  Makefile.am  Makefile.in
hadafs-0.6-master/xlators/cluster/gns/: Makefile  Makefile.in
hadafs-0.6-master/xlators/cluster/gvolume/: Makefile  Makefile.in
hadafs-0.6-master/xlators/cluster/lta/: Makefile  Makefile.in
hadafs-0.6-master/xlators/cluster/lvolume/: Makefile  Makefile.in
hadafs-0.6-master/xlators/performance/: Makefile  Makefile.am  Makefile.in
hadafs-0.6-master/xlators/protocol/: Makefile  Makefile.in
hadafs-0.6-master/xlators/storage/: Makefile  Makefile.am  Makefile.in
ior.hadafs/: Makefile  Makefile.in  (+1 more)
(+177 files in other folders)
