EXTRA_DIST = hadafs.vol.sample hadafsd.vol.sample hadafs.8 \
	porting_guide.txt authentication.txt coding-standard.pdf get_put_api_using_xattr.txt \
	translator-options.txt mac-related-xattrs.txt replicate.pdf

SUBDIRS = examples hacker-guide

voldir = $(sysconfdir)/hadafs
vol_DATA = hadafs.vol.sample hadafsd.vol.sample

man8_MANS = hadafs.8

CLEANFILES = 
